kubernetes/apps/media/prowlarr/prowlarr-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
  namespace: media
spec:
  serviceName: prowlarr
  replicas: 1
  selector:
    matchLabels:
      name: prowlarr
  template:
    metadata:
      labels:
        name: prowlarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: prowlarr-volume
          persistentVolumeClaim:
            claimName: prowlarr-volume-pvc
        - name: tmpvol
          emptyDir:
            medium: Memory
            sizeLimit: 64Mi
      containers:
        - name: prowlarr
          image: ghcr.io/onedr0p/prowlarr-develop:1.5.1.3422@sha256:040595aced360b57ee11f6de15ff23a48242f3e26dd02907bc532c90f91035b9
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: prowlarr-volume
              mountPath: /config
            - name: tmpvol
              mountPath: /tmp # Resolve error when using ReadOnly FS: "Failed to create CoreCLR, HRESULT: 0x80004005" - https://github.com/Azure/azure-functions-host/issues/8181 && https://github.com/dotnet/runtime/issues/3168
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  ports:
    - port: 9696
      protocol: TCP
      targetPort: 9696
  selector:
    name: prowlarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: prowlarr-ingress
  namespace: media
spec:
  ingressClassName: nginx-external
  rules:
    - host: media.${DOMAIN_NAME}
      http:
        paths:
          - path: /prowlarr
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
